# ChatPulse

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  backend-profile-diagnostics.txt  frontend-profile-diagnostics.txt  groups-v2-center-test.txt  groups-v2-center-typecheck.txt  groups-v2-list-test.txt  groups-v2-pytest.txt  owner-backend-diagnostics.txt  owner-frontend-diagnostics.txt  pyproject.toml  pytest-diagnostic.txt  ruff-diagnostic.txt  ruff.toml
.github/workflows/: achievement-autoformat.yml  achievement-diagnostics.yml  achievement-format.yml  achievement-progress-patch.yml  achievement-pytest-diagnostics.yml  achievement-workspace.yml  ci.yml  complete-structure-refactor.yml  export-npm-lock.yml  final-backend-diagnostics.yml  fix-split-module-lint.yml  format-owner-fixes.yml  frontend-diagnostics.yml  group-settings-diagnostics.yml  group-settings-format.yml  groups-v2-center-diagnostic.yml  groups-v2-format-artifact.yml  groups-v2-list-diagnostic.yml  groups-v2-pytest-diagnostic.yml  owner-panel-diagnostics.yml  owner-revenue-cleanup-fix.yml  owner-revenue-final-gate.yml  owner-revenue-patch.yml  owner-revenue-release-gate.yml  owner-revenue-safety-patch.yml  owner-revenue-verified-merge-v2.yml  owner-revenue-verified-merge.yml  owner-tdd.yml  owner-user-control-diagnostics.yml  profile-autoformat.yml  profile-diagnostics.yml  pytest-diagnostic-once.yml  pytest-diagnostics.yml  ruff-autofix-onboarding.yml  ruff-diagnostic.yml  ruff-diagnostics.yml  ruff-fix-owner.yml  ruff-formatter.yml
app/: achievement_models.py  billing_models.py  config.py  database.py  domain.py  engagement_models.py  groups_v2_models.py  main.py  models.py  owner_revenue_models.py  user_control_models.py  vip_product_models.py
app/achievements/: __init__.py  catalog.py  engine.py  presentation.py
app/api/: __init__.py  internal_achievements.py
app/bot/: __init__.py  keyboards.py  keyboards_settings.py  keyboards_stats.py  setup.py
docs/: OWNER_PANEL.md  refactor-completion-verification.md
miniapp/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: complete_structure_refactor.py
tests/: test_achievement_backfill.py  test_achievement_engine_v2.py  test_achievement_repository_v2.py  test_achievement_rewards.py  test_activity_repository.py  test_admin_access.py  test_billing_repository.py  test_bot_user_restriction_middleware.py  test_claimadmin_command.py  test_database_url.py  test_engagement_repository.py  test_entitlements.py  test_featured_achievements.py  test_gamification.py  test_gamification_repository.py  test_group_activation.py  test_group_reactivation.py  test_group_status_sync.py  test_groups_v2_api.py  test_groups_v2_repository.py  test_groups_v2_service.py  test_health.py  test_levels.py  test_message_classification.py  test_miniapp_achievement_events.py  test_miniapp_achievement_instances.py  test_miniapp_admin_api.py  test_miniapp_api.py  test_miniapp_auth.py  test_miniapp_repository.py  test_miniapp_static.py  test_owner_access.py  test_owner_panel_api.py  test_owner_panel_repository.py  test_owner_repository.py  test_owner_revenue.py  test_premium_analytics.py  test_premium_theme_policy.py  test_private_miniapp.py  test_profile_cards.py  (+14 more)
(+257 files in other folders)
